16-Observability/Project-1/kubernetes-manifest/deployment-svc-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-a-deployment
    # run: service-a-deployment
  name: service-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a-deployment
  template:
    metadata:
      labels:
        app: service-a-deployment
    spec:
      containers:
      - image: abhishekf5/demoservice-a:v
        name: service-a
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 3001
