16-Observability/Project-1/kubernetes-manifest/deployment-svc-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b-deployment
    # run: service-b-deployment
  name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-deployment
  template:
    metadata:
      labels:
        app: service-b-deployment
    spec:
      containers:
      - image: abhishekf5/demoservice-b:v
        name: service-b
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "256m"
            memory: "256Mi"
        ports:
        - containerPort: 3002
